<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="bean"
            type="com.jd.saas.pdadelivery.detail.bean.DeliveryDiffSkuBean" />

        <variable
            name="onUpcMoreClick"
            type="android.view.View.OnClickListener" />

        <variable
            name="onSelectReasonClick"
            type="android.view.View.OnClickListener" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_logo"
            imageUrl="@{bean.logo}"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginStart="20dp"
            app:layout_constraintBottom_toBottomOf="@+id/tv_unit_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tv_sku_name"
            tools:background="#2196F3" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_sku_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="13dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:singleLine="true"
            android:text="@{bean.skuName}"
            android:textColor="@color/delivery_text_black"
            android:textSize="@dimen/text_bigger"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/iv_logo"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="商品商品商品商品商品商品" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_upc_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="9dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:singleLine="true"
            android:text="@string/delivery_detail_barcode"
            android:textSize="@dimen/text_normal"
            app:layout_constraintStart_toStartOf="@id/tv_sku_name"
            app:layout_constraintTop_toBottomOf="@id/tv_sku_name" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="1"
            android:singleLine="true"
            android:text="@{bean.upcCode}"
            android:textColor="@color/black"
            android:textSize="@dimen/text_normal"
            app:layout_constraintBaseline_toBaselineOf="@id/tv_upc_label"
            app:layout_constraintStart_toEndOf="@id/tv_upc_label"
            tools:text="735466432367" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/shape_bg_copy"
            android:onClick="@{onUpcMoreClick}"
            android:paddingHorizontal="12dp"
            android:paddingVertical="4dp"
            android:text="@string/delivery_detail_look_more"
            android:textColor="#FF4B5FE1"
            android:visibility="@{bean.upcMoreBtnVisibility}"
            app:layout_constraintBottom_toTopOf="@+id/tv_unit_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_upc_label" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_unit_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:singleLine="true"
            android:text="@string/delivery_detail_specification"
            android:textColor="@color/color_text_grey"
            app:layout_constraintLeft_toLeftOf="@id/tv_upc_label"
            app:layout_constraintTop_toBottomOf="@id/tv_upc_label" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="1"
            android:singleLine="true"
            android:text="@{bean.uom}"
            app:layout_constraintBaseline_toBaselineOf="@id/tv_unit_label"
            app:layout_constraintStart_toEndOf="@id/tv_unit_label"
            tools:text="盒" />

        <LinearLayout
            android:id="@+id/layout_num_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/delivery_detail_bg_gery"
            android:padding="8dp"
            app:layout_constraintTop_toBottomOf="@id/tv_unit_label">

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/DeliveryTextInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/delivery_diff_expected_label" />

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/DeliveryTextInfo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:ellipsize="end"
                android:maxLines="1"
                android:singleLine="true"
                android:text="@{bean.expectedQtyStr}"
                android:textColor="@color/color_text_black"
                tools:text="45" />

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/DeliveryTextInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/delivery_diff_actual_label" />

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/DeliveryTextInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:ellipsize="end"
                android:maxLines="1"
                android:singleLine="true"
                android:text="@{bean.actualQtyStr}"
                android:textColor="@color/color_text_black"
                tools:text="12" />

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/DeliveryTextInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{bean.getDiffLabelRes}"
                tools:text="@string/delivery_diff_unreceived_label" />

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/DeliveryTextInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ellipsize="end"
                android:maxLines="1"
                android:singleLine="true"
                android:text="@{bean.diffQtyStr}"
                android:textColor="@color/delivery_text_red"
                tools:text="12" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_reason"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:gravity="center_vertical"
            android:onClick="@{onSelectReasonClick}"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layout_num_info">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_reason_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:paddingVertical="16dp"
                android:text="@string/delivery_diff_reason"
                android:textColor="@color/color_text_black"
                android:textSize="@dimen/text_bigger" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_reason"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="33dp"
                android:layout_weight="1"
                android:drawableEnd="@drawable/ic_arrow_right_dark"
                android:drawablePadding="8dp"
                android:ellipsize="end"
                android:gravity="end"
                android:hint="@string/delivery_detail_please_choose"
                android:maxLines="1"
                android:paddingVertical="16dp"
                android:singleLine="true"
                android:text="@{bean.reasonDesc}"
                android:textColor="@color/color_text_grey"
                android:textColorHint="@color/color_text_grey"
                android:textSize="@dimen/text_bigger" />
        </LinearLayout>


        <View
            android:id="@+id/line"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/delivery_detail_bg_dialog_view"
            app:layout_constraintTop_toBottomOf="@+id/ll_reason" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
